turing-talos/apps/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
spec:
  parentRefs:
  - name: envoy-private
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - longhorn.jern.fi
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
