turing-talos/apps/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
spec:
  ingressClassName: nginx
  tls:
  - secretName: longhorn-cert
    hosts:
    - &host longhorn.jern.fi
  rules:
  - host: *host
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              name: http
        path: /
        pathType: Prefix
